tests/macro-tests/cases/property/args_count_no_input.rs
use zng::prelude_wgt::{property, UiNode};

#[property(CONTEXT)]
pub fn no_inputs(child: impl IntoUiNode) -> UiNode {
    child
}

fn main() {}
